--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=dotnet_my_acquisition;Username=postgres;Password=admin1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
